[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/shaders/StarryBG.gdshader" type="Shader" id=1]
[ext_resource path="res://assets/art/characters/shipBlue_manned.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/Back_Hover.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/Back_Pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/Back.png" type="Texture" id=5]
[ext_resource path="res://src/UI/SceneTransictionRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/OptionsMenu.gd" type="Script" id=7]
[ext_resource path="res://src/UI/DialogueManager.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/bg_color = null

[node name="OptionsMenu" type="ColorRect"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Vendor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Vendor"]
position = Vector2( 313, 359 )
texture = ExtResource( 2 )

[node name="BackToMenu" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -100.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="SceneTransictionRect" parent="." instance=ExtResource( 6 )]

[node name="DialoguePosition" type="Position2D" parent="."]
position = Vector2( 433, 286 )

[node name="DialogueManager" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="finished" from="DialogueManager" to="." method="_on_DialogueManager_finished"]
